# picotts

./: Android.mk  Readme.md
.pc/: applied-patches
.pc/0003-pico2wave-Convert-text-to-.wav-using-svox-text-to-sp.patch/pico/: .gitignore  Makefile.am  configure.in
.pc/0004-add-header-files.patch/pico/: Makefile.am
.pc/0005-Install-lang-files.patch/pico/: Makefile.am
.pc/0006-Set-picolangdir.patch/pico/: Makefile.am
.pc/0009-Fix-link-order.patch/pico/: Makefile.am
PicoLangInstallerDeuDeu/: AndroidManifest.xml
PicoLangInstallerDeuDeu/res/values/: strings.xml
PicoLangInstallerDeuDeu/res/values-el/: strings.xml
PicoLangInstallerDeuDeu/res/values-es/: strings.xml
PicoLangInstallerDeuDeu/res/values-nb/: strings.xml
PicoLangInstallerDeuDeu/res/values-pt-rPT/: strings.xml
PicoLangInstallerDeuDeu/res/values-zh-rCN/: strings.xml
PicoLangInstallerDeuDeu/res/values-zh-rTW/: strings.xml
PicoLangInstallerEngGbr/: AndroidManifest.xml
PicoLangInstallerEngGbr/res/layout/: uninstall.xml
PicoLangInstallerEngGbr/res/values/: strings.xml
PicoLangInstallerEngGbr/res/values-ja/: strings.xml
PicoLangInstallerEngGbr/res/values-ko/: strings.xml
PicoLangInstallerEngGbr/res/values-pl/: strings.xml
PicoLangInstallerEngUsa/: AndroidManifest.xml
PicoLangInstallerEngUsa/res/layout/: retry.xml
PicoLangInstallerEngUsa/res/values/: strings.xml
PicoLangInstallerEngUsa/res/values-de/: strings.xml
PicoLangInstallerEngUsa/res/values-it/: strings.xml
PicoLangInstallerEngUsa/res/values-ru/: strings.xml
PicoLangInstallerEngUsa/res/values-sv/: strings.xml
PicoLangInstallerEngUsa/res/values-tr/: strings.xml
PicoLangInstallerFraFra/: AndroidManifest.xml
PicoLangInstallerFraFra/res/layout/: installing.xml
PicoLangInstallerFraFra/res/values-nl/: strings.xml
PicoLangInstallerFraFra/res/values-pt/: strings.xml
PicoLangInstallerItaIta/: AndroidManifest.xml
PicoLangInstallerSpaEsp/: Android.mk  AndroidManifest.xml
debian/: README.Source  README.testing  changelog  control  copyright  gbp.conf  libttspico-data.install  libttspico-utils.docs  libttspico-utils.manpages  libttspico0.symbols  rules
debian/patches/: 0003-pico2wave-Convert-text-to-.wav-using-svox-text-to-sp.patch  fix-undefined  git-0-Use-long-to-store-pointer  git-1-fix-memset-overflow-of-wcep_pI  git-fix  series  undefined  verbose  volume
pico/: .gitignore  Android.mk  AndroidManifest.xml  Makefile.am  autogen.sh  configure.in  proguard.flags
pico/compat/include/: TtsEngine.h
pico/compat/jni/: Android.mk  com_android_tts_compat_SynthProxy.cpp  tts.h
pico/compat/src/com/android/tts/compat/: CompatTtsService.java  SynthProxy.java
pico/lang/: PicoLangDeDeInSystem.mk  PicoLangDefaultInSystem.mk  PicoLangEnGBInSystem.mk  PicoLangEnUsInSystem.mk  PicoLangEsEsInSystem.mk  PicoLangFrFrInSystem.mk  PicoLangItItInSystem.mk  all_pico_languages.mk
pico/lib/: Android.mk  NOTICE  picoacph.c  picocep.c  picodata.c  picodata.h  picofftsg.h  picokdt.c  picoknow.h  picokpr.c  picoos.c  picopal.c  picopal.h  picopam.c  picopltf.h  picopr.c  picosig.c  picosig2.c  picotok.c
pico/res/layout/: main.xml
pico/res/values/: strings.xml
pico/res/values-cs/: strings.xml
pico/res/values-da/: strings.xml
pico/res/values-de/: strings.xml
pico/res/values-el/: strings.xml
pico/res/values-es/: strings.xml
pico/res/values-es-rUS/: strings.xml
pico/res/values-fr/: strings.xml
pico/res/values-it/: strings.xml
pico/res/values-ja/: strings.xml
pico/res/values-ko/: strings.xml
pico/res/values-nb/: strings.xml
pico/res/values-nl/: strings.xml
pico/res/values-pl/: strings.xml
pico/res/values-pt/: strings.xml
pico/res/values-pt-rPT/: strings.xml
pico/res/values-ru/: strings.xml
pico/res/values-sv/: strings.xml
pico/res/values-tr/: strings.xml
pico/res/values-zh-rCN/: strings.xml
pico/res/values-zh-rTW/: strings.xml
pico/res/xml/: tts_engine.xml  voices_list.xml
pico/src/com/svox/pico/: CheckVoiceData.java  DownloadVoiceData.java  EngineSettings.java  GetSampleText.java  LangPackUninstaller.java  Pico.java  PicoService.java  VoiceDataInstallerReceiver.java
pico/src/com/svox/pico/providers/: SettingsProvider.java
pico/tests/data/: tests_regressions_es-ES.txt  xsampa_pico_man_README.txt  xsampa_pico_man_de-DE.txt  xsampa_pico_man_en-GB.txt  xsampa_pico_man_en-US.txt  xsampa_pico_man_es-ES.txt  xsampa_pico_man_fr-FR.txt  xsampa_pico_man_it-IT.txt
pico/tts/: Android.mk  com_svox_picottsengine.cpp  svox_ssml_parser.cpp  svox_ssml_parser.h
picolanginstaller/: AndroidManifest.xml
scripts/: picotts  picotts-lc
(+531 files in other folders)
