## Makefile.am -- Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libttspico.la
libttspico_la_SOURCES = \
	lib/picoacph.c \
	lib/picoapi.c \
	lib/picobase.c \
	lib/picocep.c \
	lib/picoctrl.c \
	lib/picodata.c \
	lib/picodbg.c \
	lib/picoextapi.c \
	lib/picofftsg.c \
	lib/picokdbg.c \
	lib/picokdt.c \
	lib/picokfst.c \
	lib/picoklex.c \
	lib/picoknow.c \
	lib/picokpdf.c \
	lib/picokpr.c \
	lib/picoktab.c \
	lib/picoos.c \
	lib/picopal.c \
	lib/picopam.c \
	lib/picopr.c \
	lib/picorsrc.c \
	lib/picosa.c \
	lib/picosig.c \
	lib/picosig2.c \
	lib/picospho.c \
	lib/picotok.c \
	lib/picotrns.c \
	lib/picowa.c

